Made some changes

--- a/Public/QR_Code_Generator.html
+++ b/Public/QR_Code_Generator.html
@@ -17,7 +17,7 @@
          <button>Generate</button>
     </div>
     <div class="code">
-        <img src="" alt="QR Code"
+        <img src="" alt="QR Code">
     </div>
 </div>
     <script src ="../assets/Js/QR_Code_Generator.js"> </script>
