--- a/Public/bmi-calculator.html
+++ b/Public/bmi-calculator.html
@@ -25,7 +25,7 @@
                <label>Height(In Feet):</label><input id="height_feet" class="height_class" type="text" placeholder="Feet"/>
             </div>
             <div id="height_field">
-               <label>Enter Inch</label><input id="height_inch" class="height_class" type="text" placeholder="Inch"/>
+               <label>Enter Inch:</label><input id="height_inch" class="height_class" type="text" placeholder="Inch"/>
             </div>
          </div>
          <div class="button_container">
@@ -55,7 +55,7 @@
                <tr>
                   <td>Underweight</td>
                   <td>
-                     <18.5</td>
+                    <18.5 </td>
                </tr>
                <tr>
                   <td>Noraml</td>
