Added hover feature to the button

--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
       </div>
       <!--Back to top button-->
       <a href="#top">
-        <button id="back-to-top" style="background-color: #00c2cb">
+        <button id="back-to-top" class="zoom" style="background-color: #00c2cb">
           <i class="fa-solid fa-arrow-up"></i>
         </button>
       </a>
