fixed the email link

--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
           <a href="https://zerooctave.github.io/"
             ><i class="fa-solid fa-globe fa-2x social-icon"></i></a
           ><br />
-          <a href="ZeroOctave@protonmail.com"
+          <a href="mailto:ZeroOctave@protonmail.com"
             ><i class="fa-solid fa-envelope fa-2x social-icon"></i></a
           ><br />
         </div>
