--- a/Public/FAQcollapse.html
+++ b/Public/FAQcollapse.html
@@ -24,9 +24,9 @@
         </div>
 
         <div class="faq ">
-            <h3 class="faq-title">2. CAN A NON-SWIMMER LEARN TO SCUBA DIVE?</h3>
+            <h3 class="faq-title">2. CAN ANYONE LEARN TO SCUBA DIVE?</h3>
             <img src="https://anurbannomadic.files.wordpress.com/2021/07/should-i-scuba-diving-if-i-cant-swim-2-1.png" alt="SCUBA DIVE">
-            <p class="faq-text">Yes, non-swimmer are allowed to dive as long as they do not have health issues, but there are limits to what non-swimmer can do. Non-swimmer are only allowed to make simple intro dives with an instructor and cannot get a full scuba license if cannot swim.</p>
+            <p class="faq-text">Yes, anyone is allowed to dive as long as they do not have health issues, but there are limits to what non-swimmer can do. Non-swimmer are only allowed to make simple intro dives with an instructor and cannot get a full scuba license if cannot swim.</p>
             <button class="faq-collapse">
                 <i class="fas fa-times"></i>
                 <i class="fas fa-chevron-down"></i>
