--- a/Public/reviews.html
+++ b/Public/reviews.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../assets/css/reviews.css">
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-    <title>Reviews</title>
+    <title>Public Reviews</title>
 </head>
 <body>
     <div id="main">
