navbar style enhanced

--- a/Public/travel-website.html
+++ b/Public/travel-website.html
@@ -52,13 +52,15 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
           <ul class="navbar-nav pt-2  ">
             <li class="nav-item active">
-              <a class="nav-link  d-sm-inline" href="index.html">LATEST NEWS<span
-                  class=" d-none d-lg-inline d-xl-inline"> |</span></a>
+              <a class="nav-link  d-sm-inline" href="index.html">LATEST NEWS
+                  </a>
             </li>
+            <span class=" d-none d-lg-inline d-xl-inline"> |</span>
             <li class="nav-item">
-              <a class="nav-link  d-sm-inline" href="#about">ABOUT<span class="d-none d-lg-inline d-xl-inline">
-                  |</span></a>
+              <a class="nav-link  d-sm-inline" href="#about">ABOUT
+                  </a>
             </li>
+            <span class="d-none d-lg-inline d-xl-inline">|</span>
             <li class="nav-item">
               <a class="nav-link  d-sm-inline" href="#contact">CONTACT US<span class=" d-none"> |</span></a>
             </li>
