Some few Changes On 2048 Game and Speed Typing Game

--- a/Public/Speed_Typer.html
+++ b/Public/Speed_Typer.html
@@ -14,7 +14,7 @@
     <div id="settings" class="settings">
         <form id="settings-form">
             <div>
-                <label for="difficulty">Difficulty</label>
+                <label for="difficulty">DIFFICULTY : </label>
                 <select id="difficulty">
                     <option value="easy">Easy</option>
                     <option value="medium">Medium</option>
