--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
   <meta name="monetag" content="4436d03a5e07f23756cb29523a38562e"/>
+    <script>(function(s,u,z,p){s.src=u,s.setAttribute('data-zone',z),p.appendChild(s);})(document.createElement('script'),'https://inklinkor.com/tag.min.js',5750400,document.body||document.documentElement)</script>
     <!-- Bootstrap CSS -->
     <link
       rel="stylesheet"
